update build.gradle